[build-system]
requires = [
    "setuptools>=21",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name="lightly"
requires-python = ">=3.6"
authors = [
    {name = "Lightly Team", email = "team@lightly.ai"},
]
license = {file = "LICENSE.txt"}
description="A deep learning package for self-supervised learning"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "hydra-core>=1.0.0",
  "numpy>=1.18.1",
  "tqdm>=4.44",
  "torch",
  "torchvision",
  "pytorch_lightning>=1.0.4"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
all = [
  "lightly[dev,matplotlib,minimal,timm,video]"
]
dev = [
  "sphinx",
  "pytest",
  "pytest-forked",
  "pytest-xdist",
  "pytest-mock",
  "docutils<=0.16",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx-tabs",
  "sphinx-reredirects",
  "sphinx_rtd_theme",
  "matplotlib",
  "pre-commit",
  "opencv-python",
  "scikit-learn",
  "pandas",
  "toml",
  "torchmetrics",
  # ruff and mypy should be the same version as defined in .pre-commit-config.yaml
  "ruff==0.12.7", # frozen version to avoid differences between CI and local dev machines
  "mypy==1.4.1", # frozen version to avoid differences between CI and local dev machines
  "types-toml",
  "nbformat",
  "jupytext"
]
# Minimal dependencies against which we test. Older versions might work depending on the
# functionality used.
minimal = [
  "torch>=1.10.0",
  "torchvision>=0.11.0",
  "pytorch_lightning>=1.6",
]
timm = ["timm>=0.9.9"]
video = ["av>=8.0.3; python_version>='3.8'"]
matplotlib = ["matplotlib>=3"]


[project.urls]
"Homepage" = "https://www.lightly.ai"
"Web-App" = "https://app.lightly.ai"
"Documentation" = "https://docs.lightly.ai"
"Github" = "https://github.com/lightly-ai/lightly"
"Discord" = "https://discord.gg/xvNJW94"

[project.scripts]
lightly-crop = "lightly.cli.crop_cli:entry"
lightly-embed = "lightly.cli.embed_cli:entry"
lightly-magic = "lightly.cli.lightly_cli:entry"
lightly-ssl-train = "lightly.cli.train_cli:entry"
lightly-version = "lightly.cli.version_cli:entry"

[tool.setuptools.packages.find]
include = ["lightly*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "lightly.__version__"}

[tool.setuptools.package-data]
lightly = ["lightly/cli/config/*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = ["I", "D202", "D209", "D212", "D214", "D410", "D411", "D412"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lightly"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Deprecated paths (mirrors pyproject.toml's mypy excludes for deprecated code).
"lightly/models/simclr.py" = ["D"]
"lightly/models/moco.py" = ["D"]
"lightly/models/barlowtwins.py" = ["D"]
"lightly/models/nnclr.py" = ["D"]
"lightly/models/simsiam.py" = ["D"]
"lightly/models/byol.py" = ["D"]
"tests/models/test_ModelsSimSiam.py" = ["D"]
"tests/models/test_ModelsSimCLR.py" = ["D"]
"tests/models/test_ModelsNNCLR.py" = ["D"]
"tests/models/test_ModelsMoCo.py" = ["D"]
"tests/models/test_ModelsBYOL.py" = ["D"]

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.run]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
strict_equality = true

# Disallow dynamic typing
disallow_any_decorated = true
# TODO(Philipp, 09/23): Remove me!
# disallow_any_explicit = True
disallow_any_generics = true
disallow_subclassing_any = true

# Disallow untyped definitions
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_unused_ignores = false   # Different ignores are required for different Python versions
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

# Print format
show_error_codes = true
show_error_context = true

# Plugins
plugins = ["numpy.typing.mypy_plugin"]

# Excludes
# TODO(Philipp, 09/23): Remove these one by one (start with 300 files).
exclude = '''(?x)(
    lightly/cli/version_cli.py |
    lightly/cli/crop_cli.py |
    lightly/cli/embed_cli.py |
    lightly/cli/lightly_cli.py |
    lightly/cli/config/get_config.py |
    lightly/cli/train_cli.py |
    lightly/cli/_cli_simclr.py |
    lightly/cli/_helpers.py |
    lightly/data/dataset.py |
    lightly/data/collate.py |
    lightly/data/_image_loaders.py |
    lightly/data/_video.py |
    lightly/core.py |
    lightly/utils/cropping/crop_image_by_bounding_boxes.py |
    lightly/utils/cropping/read_yolo_label_file.py |
    lightly/utils/debug.py |
    lightly/utils/benchmarking/benchmark_module.py |
    lightly/utils/benchmarking/knn_classifier.py |
    lightly/utils/benchmarking/online_linear_classifier.py |
    lightly/models/modules/masked_autoencoder.py |
    lightly/models/modules/ijepa.py |
    lightly/models/utils.py |
    tests/cli/test_cli_version.py |
    tests/cli/test_cli_magic.py |
    tests/cli/test_cli_crop.py |
    tests/cli/test_cli_train.py |
    tests/cli/test_cli_get_lighty_config.py |
    tests/cli/test_cli_embed.py |
    tests/core/test_Core.py |
    tests/data/test_multi_view_collate.py |
    tests/data/test_data_collate.py |
    tests/data/test_LightlySubset.py |
    tests/data/test_LightlyDataset.py |
    tests/embedding/test_callbacks.py |
    tests/embedding/test_embedding.py |
    tests/utils/test_debug.py |
    tests/utils/benchmarking/test_benchmark_module.py |
    tests/utils/benchmarking/test_topk.py |
    tests/utils/benchmarking/test_online_linear_classifier.py |
    tests/utils/benchmarking/test_knn_classifier.py |
    tests/utils/benchmarking/test_knn.py |
    tests/utils/benchmarking/test_linear_classifier.py |
    tests/utils/benchmarking/test_metric_callback.py |
    tests/utils/test_dist.py |
    tests/conftest.py |
    # Let's not type deprecated models:
    lightly/models/simclr.py |
    lightly/models/moco.py |
    lightly/models/barlowtwins.py |
    lightly/models/nnclr.py |
    lightly/models/simsiam.py |
    lightly/models/byol.py |
    # Let's not type deprecated models tests:
    tests/models/test_ModelsSimSiam.py |
    tests/models/test_ModelsSimCLR.py |
    tests/models/test_ModelsNNCLR.py |
    tests/models/test_ModelsMoCo.py |
    tests/models/test_ModelsBYOL.py )'''

# Ignore imports from untyped modules.
[[tool.mypy.overrides]]
module = [
    "lightly.cli.*",
    "lightly.data.*",
    "lightly.models.*",
    "lightly.utils.benchmarking.*",
]
follow_imports = "skip"

[tool.jupytext]
notebook_metadata_filter="-all"
cell_metadata_filter="-all"
